--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihood = [3/4,1/2]\n",
+    "\n",
+    "def bayes_rule(priors,likelihood):\n",
+    "    marg = sum(np.multiply(priors,likelihood))\n",
+    "    post = np.divide(np.multiply(priors, likelihood), marg)\n",
+    "    return post\n",
+    "bayes_rule(priors, likelihood)[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_rule(priors, likelihood)[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +92,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.66666667])"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihood = [1/4,1/2]\n",
+    "\n",
+    "def bayes_rule(priors,likelihood):\n",
+    "    marg = sum(np.multiply(priors,likelihood))\n",
+    "    post = np.divide(np.multiply(priors, likelihood), marg)\n",
+    "    return post\n",
+    "bayes_rule(priors, likelihood)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +148,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihood = [0.20*0.20,0.10*0.14]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7407407407407408"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_rule(priors, likelihood)[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25925925925925924"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_rule(priors, likelihood)[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +212,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihood = [0.10*0.14,0.20*0.20]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25925926, 0.74074074])"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bayes_rule(priors,likelihood):\n",
+    "    marg = sum(np.multiply(priors,likelihood))\n",
+    "    post = np.divide(np.multiply(priors, likelihood), marg)\n",
+    "    return post\n",
+    "bayes_rule(priors, likelihood)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +257,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.        , 0.66666667])"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [1/3,1/3,1/3]\n",
+    "likelihood = [1/3,0,2/3] \n",
+    "def bayes_rule(priors,likelihood):\n",
+    "    marg = sum(np.multiply(priors,likelihood))\n",
+    "    post = np.divide(np.multiply(priors, likelihood), marg)\n",
+    "    return post\n",
+    "bayes_rule(priors, likelihood)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,6 +338,151 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulations = 100000\n",
+    "win_s1_counts = 0\n",
+    "win_s2_counts = 0\n",
+    "\n",
+    "#Simulación 1,me quedo en la misma puerta\n",
+    "for i in range(simulations):\n",
+    "    winning_door = randint(1,3)\n",
+    "    player_first_door = randint(1,3)\n",
+    "    l = [1,2,3]\n",
+    "    l.remove(winning_door)\n",
+    "    \n",
+    "    if player_first_door != winning_door : l.remove(player_first_door)\n",
+    "    game_host_opened = random.choice(l)\n",
+    "    \n",
+    "    if player_first_door == winning_door :\n",
+    "        win_s1_counts = win_s1_counts + 1\n",
+    "\n",
+    "#Simulación 2,cambio de puerta\n",
+    "\n",
+    "win_s2_counts = 0\n",
+    "\n",
+    "for i in range(simulations):\n",
+    "    winning_door = randint(1,3)\n",
+    "    \n",
+    "    player_first_door = randint(1,3)\n",
+    "    door_list = [1,2,3]\n",
+    "    door_list.remove(winning_door)\n",
+    "    \n",
+    "    if player_first_door != winning_door: \n",
+    "        door_list.remove(player_first_door)\n",
+    "        \n",
+    "    game_host_opened = random.choice(door_list)\n",
+    "    door_list = [1,2,3]\n",
+    "    door_list.remove(game_host_opened)\n",
+    "    door_list.remove(player_first_door)\n",
+    "    player_new_door = door_list[0]\n",
+    "    \n",
+    "    if player_new_door == winning_door :\n",
+    "        win_s2_counts = win_s2_counts + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33445\n",
+      "0.66843\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print results\n",
+    "\n",
+    "print(win_s1_counts / nb_simulations )\n",
+    "print(win_s2_counts / nb_simulations )\n",
+    "    \n",
+    "    \n",
+    "   \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-203-5a6fe5d915f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwin_s1_counts\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnb_simulations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plot' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -221,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
