--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import numpy and pandas:\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -332,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
