--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -303,12 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "priors = [1/3,1/3,1/3]\n",
-    "likelihoods = [0.5,0.5,0.5]\n",
+    "likelihoods = [1/3,0,2/3]\n",
     "def bayes_rule(priors, likehoods):\n",
     "    marg = sum(np.multiply(priors, likelihoods))\n",
     "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
@@ -317,50 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.33333333, 0.33333333, 0.33333333])"
+       "array([0.33333333, 0.        , 0.66666667])"
       ]
      },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bayes_rule(priors, likelihoods)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "priors = [1/3,2/3]\n",
-    "likelihoods = [0.5,0.5]\n",
-    "def bayes_rule(priors, likehoods):\n",
-    "    marg = sum(np.multiply(priors, likelihoods))\n",
-    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
-    "    return post"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.33333333, 0.66666667])"
-      ]
-     },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
