--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -18,6 +18,8 @@
    "source": [
     "%matplotlib inline\n",
     "# import numpy and pandas\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n"
    ]
   },
@@ -269,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
