--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "4           61.0         87.0    94.0       79.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,12 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "ValueNumeric= [float(x.strip('€M'))*1000000 if not 'K' in x else float(x.strip('€K'))*1000 for x in fifa['Value']]\n",
+    "fifa['ValueNumeric']=ValueNumeric"
    ]
   },
   {
@@ -287,12 +288,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(fifa['Preferred Foot'])</th>\n",
+       "      <td>2.341622e+14</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.673655</td>\n",
+       "      <td>5.608990e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(fifa['Position'])</th>\n",
+       "      <td>1.657002e+16</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20.885022</td>\n",
+       "      <td>1.634952e-96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>5.529029e+17</td>\n",
+       "      <td>18119.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 sum_sq       df          F        PR(>F)\n",
+       "C(fifa['Preferred Foot'])  2.341622e+14      1.0   7.673655  5.608990e-03\n",
+       "C(fifa['Position'])        1.657002e+16     26.0  20.885022  1.634952e-96\n",
+       "Residual                   5.529029e+17  18119.0        NaN           NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "formula = \"ValueNumeric ~ C(fifa['Preferred Foot']) + C(fifa['Position'])\"\n",
+    "model = ols(formula=formula, data=fifa).fit()\n",
+    "anova_table = sm.stats.anova_lm(model, typ='II')\n",
+    "display(anova_table)"
    ]
   },
   {
@@ -309,7 +380,8 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "# En el caso de la posición, se puede ver que influye mucho en el valor del jugador, puesto que es prácticamente 0.\n",
+    "# En el caso del pie se rechaza también la hipótesis nula, por lo que cobran más unos que otros.\n"
    ]
   },
   {
@@ -321,12 +393,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(fifa.Nationality)</th>\n",
+       "      <td>3.281224e+16</td>\n",
+       "      <td>163.0</td>\n",
+       "      <td>6.762478</td>\n",
+       "      <td>4.840477e-134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>5.370951e+17</td>\n",
+       "      <td>18043.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           sum_sq       df         F         PR(>F)\n",
+       "C(fifa.Nationality)  3.281224e+16    163.0  6.762478  4.840477e-134\n",
+       "Residual             5.370951e+17  18043.0       NaN            NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "formula = \"ValueNumeric ~ C(fifa.Nationality)\"\n",
+    "model = ols(formula=formula, data=fifa).fit()\n",
+    "anova_table = sm.stats.anova_lm(model, typ='II')\n",
+    "display(anova_table)"
    ]
   },
   {
@@ -334,6 +466,16 @@
    "metadata": {},
    "source": [
     "What is your conclusion from this ANOVA?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En el caso de la nacionalidad, se puede ver que influye mucho en el valor del jugador,\n",
+    "#puesto que el PR(>F) es prácticamente 0."
    ]
   },
   {
