--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +213,121 @@
        "      <td>94.0</td>\n",
        "      <td>79.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>E. Hazard</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>€93M</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>LF</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>L. Modrić</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Real Madrid</td>\n",
+       "      <td>€67M</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>RCM</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>L. Suárez</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>FC Barcelona</td>\n",
+       "      <td>€80M</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sergio Ramos</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Real Madrid</td>\n",
+       "      <td>€51M</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>RCB</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>J. Oblak</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Slovenia</td>\n",
+       "      <td>90</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Atlético Madrid</td>\n",
+       "      <td>€68M</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -224,6 +339,11 @@
        "2          Neymar Jr   26      Brazil       92         93   \n",
        "3             De Gea   27       Spain       91         93   \n",
        "4       K. De Bruyne   27     Belgium       91         92   \n",
+       "5          E. Hazard   27     Belgium       91         91   \n",
+       "6          L. Modrić   32     Croatia       91         91   \n",
+       "7          L. Suárez   31     Uruguay       91         91   \n",
+       "8       Sergio Ramos   32       Spain       91         91   \n",
+       "9           J. Oblak   25    Slovenia       90         93   \n",
        "\n",
        "                  Club    Value Preferred Foot Position  Weak Foot  \\\n",
        "0         FC Barcelona  €110.5M           Left       RF        4.0   \n",
@@ -231,6 +351,11 @@
        "2  Paris Saint-Germain  €118.5M          Right       LW        5.0   \n",
        "3    Manchester United     €72M          Right       GK        3.0   \n",
        "4      Manchester City    €102M          Right      RCM        5.0   \n",
+       "5              Chelsea     €93M          Right       LF        4.0   \n",
+       "6          Real Madrid     €67M          Right      RCM        4.0   \n",
+       "7         FC Barcelona     €80M          Right       RS        4.0   \n",
+       "8          Real Madrid     €51M          Right      RCB        3.0   \n",
+       "9      Atlético Madrid     €68M          Right       GK        3.0   \n",
        "\n",
        "   Acceleration  SprintSpeed  Stamina  Strength  LongShots  Aggression  \\\n",
        "0          91.0         86.0     72.0      59.0       94.0        48.0   \n",
@@ -238,23 +363,34 @@
        "2          94.0         90.0     81.0      49.0       82.0        56.0   \n",
        "3          57.0         58.0     43.0      64.0       12.0        38.0   \n",
        "4          78.0         76.0     90.0      75.0       91.0        76.0   \n",
+       "5          94.0         88.0     83.0      66.0       80.0        54.0   \n",
+       "6          80.0         72.0     89.0      58.0       82.0        62.0   \n",
+       "7          86.0         75.0     90.0      83.0       85.0        87.0   \n",
+       "8          76.0         75.0     84.0      83.0       59.0        88.0   \n",
+       "9          43.0         60.0     41.0      78.0       12.0        34.0   \n",
        "\n",
        "   Interceptions  Positioning  Vision  Penalties  \n",
        "0           22.0         94.0    94.0       75.0  \n",
        "1           29.0         95.0    82.0       85.0  \n",
        "2           36.0         89.0    87.0       81.0  \n",
        "3           30.0         12.0    68.0       40.0  \n",
-       "4           61.0         87.0    94.0       79.0  "
+       "4           61.0         87.0    94.0       79.0  \n",
+       "5           41.0         87.0    89.0       86.0  \n",
+       "6           83.0         79.0    92.0       82.0  \n",
+       "7           41.0         92.0    84.0       85.0  \n",
+       "8           90.0         60.0    63.0       75.0  \n",
+       "9           19.0         11.0    70.0       11.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fifa.head()\n",
-    "\n"
+    "fifa.head(10)\n",
+    "\n",
+    "#asD"
    ]
   },
   {
