--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -782,17 +782,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maximiliano/miniconda3/envs/ironhack/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2389: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-      "  return ptp(axis=axis, out=out, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -811,7 +803,7 @@
        "  <th>Date:</th>             <td>Thu, 18 Jul 2019</td> <th>  Prob (F-statistic):</th>  <td>8.04e-193</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:58:47</td>     <th>  Log-Likelihood:    </th> <td>-3.0350e+05</td>\n",
+       "  <th>Time:</th>                 <td>19:47:45</td>     <th>  Log-Likelihood:    </th> <td>-3.0350e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 17918</td>      <th>  AIC:               </th>  <td>6.070e+05</td> \n",
@@ -864,7 +856,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.048\n",
        "Method:                 Least Squares   F-statistic:                     453.4\n",
        "Date:                Thu, 18 Jul 2019   Prob (F-statistic):          8.04e-193\n",
-       "Time:                        18:58:47   Log-Likelihood:            -3.0350e+05\n",
+       "Time:                        19:47:45   Log-Likelihood:            -3.0350e+05\n",
        "No. Observations:               17918   AIC:                         6.070e+05\n",
        "Df Residuals:                   17915   BIC:                         6.070e+05\n",
        "Df Model:                           2                                         \n",
@@ -887,7 +879,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +888,6 @@
     "X = sm.add_constant(fifa[['Stamina','SprintSpeed']])\n",
     "Y = fifa['ValueNumeric']\n",
     "model = sm.OLS(Y, X).fit()\n",
-    "predictions = model.predict(X)\n",
     "model.summary()"
    ]
   },
@@ -908,12 +899,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
+    "***The r squared is 0.048 which is very small. This means that our model only captures 4.8% of the variation in the data. Our p-value is much lower than 0.05 which rejects the null hypothesis, then the slope is significantly different from 0 and the variables are dependant***\n",
     "\n"
    ]
   },
@@ -926,8 +915,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -947,7 +938,7 @@
        "  <th>Date:</th>             <td>Thu, 18 Jul 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:06:20</td>     <th>  Log-Likelihood:    </th> <td>-3.0027e+05</td>\n",
+       "  <th>Time:</th>                 <td>19:47:36</td>     <th>  Log-Likelihood:    </th> <td>-3.0027e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 17918</td>      <th>  AIC:               </th>  <td>6.006e+05</td> \n",
@@ -997,7 +988,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.336\n",
        "Method:                 Least Squares   F-statistic:                     9058.\n",
        "Date:                Thu, 18 Jul 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        19:06:20   Log-Likelihood:            -3.0027e+05\n",
+       "Time:                        19:47:36   Log-Likelihood:            -3.0027e+05\n",
        "No. Observations:               17918   AIC:                         6.006e+05\n",
        "Df Residuals:                   17916   BIC:                         6.006e+05\n",
        "Df Model:                           1                                         \n",
@@ -1019,7 +1010,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,8 +1019,7 @@
     "X = sm.add_constant(fifa['Potential'])\n",
     "Y = fifa['ValueNumeric']\n",
     "model = sm.OLS(Y, X).fit()\n",
-    "predictions = model.predict(X)\n",
-    "model.summary()\n"
+    "model.summary()"
    ]
   },
   {
@@ -1040,12 +1030,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
+    "***The r squared is 0.336 which is very small. This means that our model captures 33.6% of the variation in the data. Our p-value is 0, both variables are almost identical. This model seems to be a better fit than our previous one***\n",
     "\n"
    ]
   },
@@ -1090,11 +1078,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***There doesn't seem to be a linear relationship between both variables. The relationship looks more like an exponential one.****"
+   ]
   }
  ],
  "metadata": {
