updating first lab

--- a/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
+++ b/module-2/lab-correlation-tests-with-scipy/your-code/main.ipynb
@@ -268,12 +268,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "# for future refactorization:\n",
+    "\"\"\"\n",
+    "def only_numeric(val):   \n",
+    "    money = { \n",
+    "        \"M\":float(val.replace(\"€\", \"\").replace(\"M\", \"\"))*1000000, \"K\":float(val.replace(\"€\", \"\").replace(\"K\", \"\"))*1000\n",
+    "    }\n",
+    "    return [numero for key, numero in money.items() if key in val]\"\"\"\n",
+    "########################## I left this code here for future revision ##########################\n",
+    "\n",
+    "\n",
+    "def to_numeric(val):\n",
+    "    if \"€\" in val:\n",
+    "        val = val.replace(\"€\",\"\")\n",
+    "    if \"M\" in val:\n",
+    "        val = val.replace(\"M\",\"\")\n",
+    "        return float(val)\n",
+    "    elif \"K\" in val:\n",
+    "        val = val.replace(\"K\",\"\")\n",
+    "        return float(val)/1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    110.5\n",
+       "1     77.0\n",
+       "2    118.5\n",
+       "3     72.0\n",
+       "4    102.0\n",
+       "Name: ValueNumeric, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fifa[\"ValueNumeric\"] = fifa[\"Value\"].apply(to_numeric)\n",
+    "fifa[\"ValueNumeric\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Name', 'Age', 'Nationality', 'Overall', 'Potential', 'Club', 'Value',\n",
+       "       'Preferred Foot', 'Position', 'Weak Foot', 'Acceleration',\n",
+       "       'SprintSpeed', 'Stamina', 'Strength', 'LongShots', 'Aggression',\n",
+       "       'Interceptions', 'Positioning', 'Vision', 'Penalties', 'ValueNumeric'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fifa.columns\n"
    ]
   },
   {
@@ -289,11 +356,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(fifa[\"Preferred Foot\"])</th>\n",
+       "      <td>231.646105</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.510257</td>\n",
+       "      <td>6.140953e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C(Position)</th>\n",
+       "      <td>16596.095506</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20.694853</td>\n",
+       "      <td>1.699733e-95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>551459.281946</td>\n",
+       "      <td>17879.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  sum_sq       df          F        PR(>F)\n",
+       "C(fifa[\"Preferred Foot\"])     231.646105      1.0   7.510257  6.140953e-03\n",
+       "C(Position)                 16596.095506     26.0  20.694853  1.699733e-95\n",
+       "Residual                   551459.281946  17879.0        NaN           NaN"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Your code here:\n",
+    "\n",
+    "formula = 'ValueNumeric ~ C(fifa[\"Preferred Foot\"]) + C(Position)'\n",
+    "model = ols(formula=formula, data=fifa).fit()\n",
+    "\n",
+    "anova_table = sm.stats.anova_lm(model, typ='II')\n",
+    "anova_table\n",
+    "\n",
     "\n"
    ]
   },
