--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2 , 1/2]\n",
+    "likelihoods = [0.75 , 0.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar una galleta de vainilla del Bowl 1 es de: 0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La probabilidad de sacar una galleta de vainilla del Bowl 1 es de: {}\".format(bayes(priors, likelihoods)[0]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar una galleta de vainilla del Bowl 2 es de: 0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La probabilidad de sacar una galleta de vainilla del Bowl 2 es de: {}\".format(bayes(priors, likelihoods)[1]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +101,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2 , 1/2]\n",
+    "likelihoods = [0.25 , 0.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar una galleta de chocolate del Bowl 1 es de: 0.3333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La probabilidad de sacar una galleta de chocolate del Bowl 1 es de: {}\".format(bayes(priors, likelihoods)[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar una galleta de chocolate del Bowl 2 es de: 0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La probabilidad de sacar una galleta de chocolate del Bowl 2 es de: {}\".format(bayes(priors, likelihoods)[1]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar un caramelo amarillo de la Bolsa 1 es de: 0.7407407407407408\n"
+     ]
+    }
+   ],
+   "source": [
+    "priors = [1/2 , 1/2]\n",
+    "likelihoods = [0.20*0.20, 0.10*0.14]\n",
+    "bayes(priors, likelihoods)\n",
+    "print(\"La probabilidad de sacar un caramelo amarillo de la Bolsa 1 es de: {}\".format(bayes(priors, likelihoods)[0]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar un caramelo amarillo de la Bolsa 2 es de: 0.25925925925925924\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La probabilidad de sacar un caramelo amarillo de la Bolsa 2 es de: {}\".format(bayes(priors, likelihoods)[1]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de sacar un caramelo verde de la Bolsa 1 es de: 0.25925925925925924\n",
+      "La probabilidad de sacar un caramelo verde de la Bolsa 2 es de: 0.7407407407407408\n"
+     ]
+    }
+   ],
+   "source": [
+    "priors = [1/2 , 1/2]\n",
+    "likelihoods = [0.10*0.14, 0.20*0.20]\n",
+    "bayes(priors, likelihoods)\n",
+    "print(\"La probabilidad de sacar un caramelo verde de la Bolsa 1 es de: {}\".format(bayes(priors, likelihoods)[0]))\n",
+    "print(\"La probabilidad de sacar un caramelo verde de la Bolsa 2 es de: {}\".format(bayes(priors, likelihoods)[1]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +258,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.        , 0.66666667])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [1/3 , 1/3, 1/3]\n",
+    "likelihoods = [1/3, 0, 2/3]\n",
+    "bayes(priors, likelihoods)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected door: 1\n",
+      "Win door: 2\n",
+      "Removed door: [2, 3]\n",
+      "Selected door: 1\n",
+      "Win door: 1\n",
+      "Removed door: [1, 2, 3]\n",
+      "Selected door: 3\n",
+      "Win door: 2\n",
+      "Removed door: [1, 2]\n",
+      "Selected door: 2\n",
+      "Win door: 3\n",
+      "Removed door: [1, 3]\n",
+      "Selected door: 1\n",
+      "Win door: 1\n",
+      "Removed door: [1, 2, 3]\n",
+      "Selected door: 2\n",
+      "Win door: 3\n",
+      "Removed door: [1, 3]\n",
+      "Selected door: 2\n",
+      "Win door: 1\n",
+      "Removed door: [1, 3]\n",
+      "Selected door: 1\n",
+      "Win door: 2\n",
+      "Removed door: [2, 3]\n",
+      "Selected door: 1\n",
+      "Win door: 3\n",
+      "Removed door: [2, 3]\n",
+      "Selected door: 2\n",
+      "Win door: 2\n",
+      "Removed door: [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "simulation = 10\n",
+    "\n",
+    "winer_without_changes=0\n",
+    "for i in range(simulation):\n",
+    "\n",
+    "    three_doors = [1,2,3]\n",
+    "\n",
+    "    selected_door = random.randint(1,3)\n",
+    "    print(\"Selected door: {}\".format(selected_door))\n",
+    "    \n",
+    "    win_door  =random.randint(1,3)\n",
+    "    print(\"Win door: {}\".format(win_door))\n",
+    "    \n",
+    "    if selected_door != win_door: \n",
+    "        three_doors.remove(selected_door)\n",
+    "\n",
+    "        removed_door = random.choice(three_doors)  \n",
+    "    if selected_door == win_door:\n",
+    "        winer_without_changes+=winer_without_changes\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    removed_door = three_doors\n",
+    "    print(\"Removed door: {}\".format(removed_door))\n",
+    "    #removed_door = [x for x in three_doors if x != win_door or x != selected_door]\n",
+    "    #print(\"Removed door: {}\".format(removed_door))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(win_door)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,7 +389,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "visitors = 100\n",
+    "sing_up = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "n_draws = 1000000\n",
+    "prior = pd.Series(np.random.uniform(0, 1, n_draws))\n",
+    "\n",
+    "prior.hist();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,7 +420,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generative_model(p):\n",
+    "    return np.random.binomial(visitors, p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generative_model(0.14)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
