--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +20,19 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import numpy and pandas:\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -46,14 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code\n",
     "\n",
     "cats = np.array(pd.read_csv(\"https://raw.githubusercontent.com/bioramble/pca/master/cat.csv\", header=None))\n",
-    "dogs = np.array(pd.read_csv(\"https://raw.githubusercontent.com/bioramble/pca/master/dog.csv\", header=None))"
+    "dogs = np.array(pd.read_csv(\"https://raw.githubusercontent.com/bioramble/pca/master/dog.csv\", header=None))\n",
+    "\n"
    ]
   },
   {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +75,7 @@
        "(4096, 80)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
        "(4096, 80)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -144,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11bdca320>"
+       "<matplotlib.image.AxesImage at 0x120f83630>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,21 +175,22 @@
     "# Run this code:\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.imshow(cats[:,0].reshape(64, 64).T, cmap=plt.cm.bone, interpolation='nearest') "
+    "ax.imshow(cats[:,0].reshape(64, 64).T, cmap=plt.cm.bone, interpolation='nearest') \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x10ad92908>"
+       "<matplotlib.image.AxesImage at 0x1225403c8>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,7 +211,8 @@
     "# Run this code:\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.imshow(dogs[:,0].reshape(64, 64).T, cmap=plt.cm.bone, interpolation='nearest') "
+    "ax.imshow(dogs[:,0].reshape(64, 64).T, cmap=plt.cm.bone, interpolation='nearest') \n",
+    "\n"
    ]
   },
   {
@@ -223,17 +226,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def standardize(x):\n",
+    "from statistics import stdev\n",
+    "\n",
+    "def standardize(sample_input):\n",
     "    #This function takes as input a numpy array and returns a stadardized numpy array of the same dimensions.\n",
     "    #Sample input: np.array([[1,2,3],[4,5,6]])\n",
     "    #Sample output: np.array([[-1,-1,-1],[1,1,1]])\n",
     "    \n",
-    "    # Your code here:\n",
+    "    sample = sample_input.T\n",
+    "    col_means = sample.mean(axis=0)\n",
+    "    sd = np.std(sample, axis=0)\n",
+    "    sample_output = (sample - col_means) / sd\n",
+    "    return print(sample_output)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.63690867 -0.6147912  -0.58264372 ... -0.70824473 -0.71264054\n",
+      "  -0.74441224]\n",
+      " [-1.185939   -1.19709417 -1.19013954 ... -1.17405592 -1.29700578\n",
+      "  -1.47598676]\n",
+      " [ 1.85381432  2.02687588  1.98540679 ...  1.83254355  1.68183168\n",
+      "   1.83016731]\n",
+      " ...\n",
+      " [-0.6904726  -0.81362636 -0.59645044 ... -0.12950962  0.05701124\n",
+      "  -0.13945639]\n",
+      " [ 1.49225776  1.65761059  1.64023871 ...  0.92915216  0.96919114\n",
+      "   0.88756168]\n",
+      " [-0.14144227 -0.00408322 -0.00276134 ... -0.00247021 -0.32781465\n",
+      "  -0.01283773]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "standardize(cats)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.77530603  1.82148628  1.83601615 ... -0.06809198 -0.05340239\n",
+      "  -0.05221503]\n",
+      " [ 0.51050886  0.43355503  0.16215527 ... -0.00773344  0.30890361\n",
+      "   0.30970867]\n",
+      " [ 0.45610898  0.60010678  0.48297861 ...  0.15825255  0.00698194\n",
+      "   0.00810558]\n",
+      " ...\n",
+      " [-1.18948734 -1.14868661 -1.20483111 ... -1.47142802 -1.4120499\n",
+      "  -1.45466939]\n",
+      " [-0.86308807 -0.32980716 -0.32605415 ...  0.88255502  0.55044094\n",
+      "   0.55099114]\n",
+      " [ 1.40810685  1.47450347  1.43149977 ...  0.92782392  1.00332344\n",
+      "   1.01847593]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "standardize(dogs)"
    ]
   },
   {
@@ -245,12 +312,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[224, 131, 127, ...,  60, 223, 101],\n",
+       "       [224, 124, 136, ...,  50, 224, 107],\n",
+       "       [224, 104, 127, ...,  63, 225, 106],\n",
+       "       ...,\n",
+       "       [100, 104, 115, ..., 105, 180, 114],\n",
+       "       [100, 124, 104, ..., 118, 182,  91],\n",
+       "       [100, 124, 104, ..., 104, 177, 113]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "pets = np.concatenate((dogs, cats), axis=1)\n",
+    "pets\n"
    ]
   },
   {
@@ -262,12 +346,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.37662907 -0.30753004  0.93254857 ... -1.80817356  1.42293481\n",
+      "  -0.20363951]\n",
+      " [ 2.37662907 -0.40500299  1.15681724 ... -2.06459792  1.44036713\n",
+      "  -0.05437635]\n",
+      " [ 2.37662907 -0.68349716  0.93254857 ... -1.73124626  1.45779946\n",
+      "  -0.07925354]\n",
+      " ...\n",
+      " [ 0.22755315 -0.68349716  0.63352369 ... -0.65426398  0.67334483\n",
+      "   0.11976401]\n",
+      " [ 0.22755315 -0.40500299  0.35941754 ... -0.32091232  0.70820948\n",
+      "  -0.45241144]\n",
+      " [ 0.22755315 -0.40500299  0.35941754 ... -0.67990641  0.62104786\n",
+      "   0.09488681]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "print(scaler.fit_transform(pets))\n"
    ]
   },
   {
@@ -283,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
