--- a/module-2/lab-pca/your-code/main.ipynb
+++ b/module-2/lab-pca/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,12 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -179,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11ec759e8>"
+       "<matplotlib.image.AxesImage at 0x1a239507f0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,21 +228,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
     "def standardize(x):\n",
-    "    for e in x:\n",
-    "        np.mean(x, axis=0)\n",
-    "        np.std(x, axis=0)\n",
-    "        return \n",
+    "    return (x-np.mean(x,axis=0))/np.std(x,axis=0)\n",
     "    #This function takes as input a numpy array and returns a stadardized numpy array of the same dimensions.\n",
     "    #Sample input: np.array([[1,2,3],[4,5,6]])\n",
     "    #Sample output: np.array([[-1,-1,-1],[1,1,1]])\n",
     "    \n",
-    "    # Your code here:\n",
-    "    "
+    "    # Your code here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dogs_array = standardize(dogs)\n",
+    "cats_array = standardize(cats)"
    ]
   },
   {
@@ -249,12 +260,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.37662907, -0.30753004,  0.93254857, ..., -1.80817356,\n",
+       "         1.42293481, -0.20363951],\n",
+       "       [ 2.37662907, -0.40500299,  1.15681724, ..., -2.06459792,\n",
+       "         1.44036713, -0.05437635],\n",
+       "       [ 2.37662907, -0.68349716,  0.93254857, ..., -1.73124626,\n",
+       "         1.45779946, -0.07925354],\n",
+       "       ...,\n",
+       "       [ 0.22755315, -0.68349716,  0.63352369, ..., -0.65426398,\n",
+       "         0.67334483,  0.11976401],\n",
+       "       [ 0.22755315, -0.40500299,  0.35941754, ..., -0.32091232,\n",
+       "         0.70820948, -0.45241144],\n",
+       "       [ 0.22755315, -0.40500299,  0.35941754, ..., -0.67990641,\n",
+       "         0.62104786,  0.09488681]])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "array_no_scaler = np.concatenate((dogs_array, cats_array), axis=1)\n",
+    "array_no_scaler "
    ]
   },
   {
@@ -266,12 +301,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.37662907, -0.30753004,  0.93254857, ..., -1.80817356,\n",
+       "         1.42293481, -0.20363951],\n",
+       "       [ 2.37662907, -0.40500299,  1.15681724, ..., -2.06459792,\n",
+       "         1.44036713, -0.05437635],\n",
+       "       [ 2.37662907, -0.68349716,  0.93254857, ..., -1.73124626,\n",
+       "         1.45779946, -0.07925354],\n",
+       "       ...,\n",
+       "       [ 0.22755315, -0.68349716,  0.63352369, ..., -0.65426398,\n",
+       "         0.67334483,  0.11976401],\n",
+       "       [ 0.22755315, -0.40500299,  0.35941754, ..., -0.32091232,\n",
+       "         0.70820948, -0.45241144],\n",
+       "       [ 0.22755315, -0.40500299,  0.35941754, ..., -0.67990641,\n",
+       "         0.62104786,  0.09488681]])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_scaler = scaler.transform(array_no_scaler)\n",
+    "array_scaler\n",
+    "\n",
+    "#No se si es esto la verdad. He llegado hasta aquí. "
    ]
   },
   {
